--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
             <a href="#">Food<span>cort</span></a>
           </div>
           <p class="section__description">
-            Embark on a gastronomic journey with FoodMan, where every bite tells
+            Embark on a gastronomic journey with Foodcort, where every bite tells
             a story and every dish is crafted to perfection.
           </p>
         </div>
